<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Ayush</string>

    <string name="label_settings">Settings</string>

    <string name="msg_welcome_message">Video Conference/Appointment</string>

    <string name="label_channel_name_hint">Conference Name</string>

    <string name="label_encryption_key_hint">Encryption key(Optional)</string>

    <string name="label_join">Join</string>

    <string name="label_confirm">Confirm</string>

    <string name="label_send">Send</string>

    <string name="msg_say_something">Say something…</string>

    <string name="msg_no_network_connection">No network connection, please check the network settings</string>

    <string name="label_title_resolution">Resolution\n(Width * Height)</string>
    <string name="label_title_frame_rate">Frame Rate\n(fps)</string>
    <string name="label_title_bit_rate">Bit Rate\n(kbps)</string>

    // DO NOT TRANSLATE
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="note">Please put the Conference Name below to proceed, you can ask the conference name from the respective doctor via messages.</string>
</resources>
