<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".ui.MainActivity"
                android:background="#291867">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_welcome_message"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#ffffff"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note"
                android:textSize="12sp"
                android:textColor="#ffffff"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/channel_name"
                    android:drawablePadding="10sp"
                    android:layout_width="300dp"
                    android:foregroundGravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/label_channel_name_hint"
                    android:drawableStart="@drawable/ic_user"
                    android:drawableLeft="@drawable/ic_user"
                    tools:ignore="RtlHardcoded"
                    android:digits="@string/legal_channel_name_characters"
                   />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    >

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/encryption_key"
                        android:drawablePadding="10sp"
                        android:layout_width="0dp"
                        android:foregroundGravity="center"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        android:layout_weight="20"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:hint="@string/label_encryption_key_hint"
                        android:layout_marginTop="40dp"
                        android:drawableStart="@drawable/ic_pass"
                        android:drawableLeft="@drawable/ic_pass"
                        tools:ignore="RtlHardcoded"
                        android:digits="@string/legal_channel_name_characters"
                        />

                </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/encryption_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginEnd="28dp"
                        android:layout_marginRight="28dp"
                        />

                </LinearLayout>



            <Button
                android:id="@+id/button_join"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                android:onClick="onClickJoin"
                android:enabled="false"
                android:text="@string/label_join" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
